fix: 修复原来的问题

--- a/src/components/Detail/HistoryPerformance/index.less
+++ b/src/components/Detail/HistoryPerformance/index.less
@@ -46,6 +46,7 @@
       color: #666;
       font-size: 14px;
       text-align: center;
+      overflow-x: auto;
       .ant-table-bordered .ant-table-thead > tr > th {
         background: #f5f7fa;
         padding: 7px 0;
