--- a/src/components/fund/detail/heavyStock/index.less
+++ b/src/components/fund/detail/heavyStock/index.less
@@ -1,15 +1,25 @@
 .heavyStock {
-  &-title {
+  &-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 14px 20px;
     border-bottom: 1px solid #ededed;
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 22px;
-    color: #333;
+    &__title {
+      font-size: 18px;
+      font-weight: 600;
+      line-height: 25px;
+      color: #333;
+    }
+    &__date {
+      font-size:14px;
+      line-height: 14px;
+      color: #666;
+    }
   }
   #treeDomChart {
     padding: 20px 20px 0;
     width: 100%;
-    height: 340px;
+    height: 356px;
   }
 }
