--- a/src/components/fund/detail/historical/index.less
+++ b/src/components/fund/detail/historical/index.less
@@ -36,16 +36,12 @@
         }
         .ant-tooltip-inner {
           border-radius: 4px;
-          border: 1px solid #ebeef5;
-          background-color: #fff;
-          box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.05);
-          padding: 12px;
-          color: #333;
+          border: 1px solid #000;
+          background-color: rgba(0,0,0,0.8);
+          padding: 13px 16px;
+          color: #fff;
           font-size: 14px;
-          line-height: 20px;
-        }
-        .ant-tooltip-arrow {
-          display: none;
+          line-height: 21px;
         }
       }
       .explain {
