feat: 新增货币基金详情页面页面

--- a/src/components/fund/detail/historical/index.less
+++ b/src/components/fund/detail/historical/index.less
@@ -9,11 +9,11 @@
   font-weight: 600;
   .historicalChart {
     width: 70%;
-    height: 393px;
+    height: 405px;
   }
   &-odd {
     flex: 1;
-    padding: 0 0 20px 20px;
+    padding-left:20px;
     margin: 20px 0 0 20px;
     border-left: 1px dashed #ededed;
     &__posEarn {
@@ -24,7 +24,7 @@
       font-size: 0;
       line-height: 0;
       .name {
-        margin-bottom: 6px;
+        margin-bottom: 8px;
         font-size: 16px;
         line-height: 22px;
         color: #333;
@@ -45,7 +45,7 @@
         }
       }
       .explain {
-        margin-bottom: 40px;
+        margin-bottom: 54px;
         font-size: 14px;
         line-height: 20px;
         color: #999;
@@ -59,6 +59,7 @@
         border-radius: 0;
       }
       .ant-progress-success-bg, .ant-progress-bg{
+        height: 12px!important;
         background-color: #dcae73;
       }
       .progress-data {
