--- a/src/components/fund/detail/scaleAnalysis/index.less
+++ b/src/components/fund/detail/scaleAnalysis/index.less
@@ -24,6 +24,7 @@
   }
   .structure {
     border-top: 12px solid #F5F6FB;
+    padding-bottom: 20px;
     &-chart {
       display: flex;
       &__left {
