--- a/src/components/fund/detail/sceneAnalysis/index.less
+++ b/src/components/fund/detail/sceneAnalysis/index.less
@@ -1,6 +1,6 @@
 .sceneAnalysis {
   .title {
-    padding: 20px 20px 14px;
+    padding: 14px 20px;
     border-bottom: 1px solid #ededed;
     font-size: 18px;
     font-weight: 600;
