--- a/src/components/fund/detail/heavyBond/index.less
+++ b/src/components/fund/detail/heavyBond/index.less
@@ -1,20 +1,21 @@
-.fundManager-component {
-  .title {
+.heavyBond {
+  &-title {
     padding: 14px 20px;
     border-bottom: 1px solid #ededed;
+    border-top: 12px solid #f5f6fb;
     font-size: 18px;
     font-weight: 600;
-    line-height: 25px;
+    line-height: 26px;
     color: #333;
   }
-  .managerChart {
+  .chart {
     width: 100%;
-    height: 382px;
+    height: 288px;
   }
   .ant-table {
     border-top: 1px dashed #ededed;
     padding: 20px 0;
-    margin: 20px 20px 0;
+    margin: 0 20px;
     font-size: 14px;
     line-height: 20px;
     color: #333;
@@ -22,18 +23,11 @@
   .ant-table-thead > tr > th {
     background: #f5f7fa;
     border-bottom-color: #ebeef5;
-    padding: 8px 20px;
+    padding: 8px 10px;
     color: #999;
   }
   .ant-table-tbody > tr > td {
-    padding: 8px 20px;
+    padding: 8px 10px;
     border-bottom-color: #ebeef5;
-  }
-  .managerColor {
-    display: inline-block;
-    margin-right: 5px;
-    width: 10px;
-    height: 10px;
-    border-radius: 2px;
   }
 }
