--- a/src/components/fund/detail/historical/index.less
+++ b/src/components/fund/detail/historical/index.less
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   display: flex;
   height: 100%;
-  padding: 0 20px;
+  padding: 0 20px 20px;
   font-size: 14px;
   line-height: 20px;
   color: #333;
