--- a/src/components/fund/detail/productReport/index.less
+++ b/src/components/fund/detail/productReport/index.less
@@ -1,6 +1,6 @@
 .productReport {
   .title {
-    padding: 20px 20px 14px;
+    padding: 14px 20px;
     border-bottom: 1px solid #ededed;
     font-size: 18px;
     font-weight: 600;
@@ -14,6 +14,7 @@
   }
   .ant-table {
     margin: 20px 20px 0;
+    padding-bottom: 20px;
     font-size: 14px;
     line-height: 20px;
     color: #333;
